--- a/css/style.css
+++ b/css/style.css
@@ -27,15 +27,17 @@ header .p-5{
     height: 91vh ;
 }
 header .p-5 .container-fluid{
-    display: flex;
-}
-header .p-5 .container-fluid p{
     width: 100%;
 }
-header .p-5 .container-fluid img{
-    height: 300px;
+header .p-5 .container-fluid .col{
+    width: 50%;
+    height: auto;
+    float: left;
+}
+
+header .p-5 .container-fluid .img-fluid{
+    min-width: 100px;
     float: right;
-    margin: 20px;
 }
 main .desc{
     display: flex;
@@ -73,6 +75,12 @@ main .category .btn-group{
 main .category .btn-group .btn{
     margin: 10px;
 }
+main .banefit{
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 main .banefit ul{
     max-width: 500px;
 }
@@ -99,6 +107,22 @@ main .maps .mapouter .gmap_canvas{
 }
 
 @media (max-width: 600px) {
+    header .p-5{
+        display: flex;
+        height: 91vh;
+        justify-content: center;
+        align-items: center;
+    }
+    header .p-5 .container-fluid .col{
+        width: 40%;
+    }
+    header .p-5 .container-fluid .col .col-md-8{
+        font-size: 1rem !important;
+    }
+    header .p-5 .container-fluid .img-fluid{
+        width: 60%;
+        float: right;
+    }
     .wa-btn{
         position: fixed;
         height:50px;
